Update Windows installer build script to use Gradle